--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.3.3+1
   get: ^4.6.6
+  firebase_core: ^3.1.0
 
 dev_dependencies:
   flutter_test:
