--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.3.3+1
   get: ^4.6.6
   firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
 
 dev_dependencies:
   flutter_test:
