--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.1.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.0.1
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
